# DoNFT-MVP-NEAR

./: .gitignore  README.md
.github/workflows/: deploy-front.yml
crypto/: .env.example  Cargo.toml  README.md  build.sh  deploy.sh  dev-deploy.sh
crypto/donft-bundle/: Cargo.toml
crypto/donft-bundle/src/: approval.rs  bundle.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  unbundle.rs
crypto/donft-collection-factory/: Cargo.toml
crypto/donft-collection-factory/src/: lib.rs
crypto/donft-effects/: Cargo.toml
crypto/donft-effects/src/: lib.rs
crypto/near/: package.json
crypto/testing/: ava.testnet.config.cjs  package.json
crypto/testing/__tests__/: nft.approves.ava.ts  nft.core.ava.ts  nft.minting.ava.ts  nft.stores_factory.ava.ts
crypto/testing/__tests__/test_utils/: workspaces.ts
frontend/: .env.development.local  .env.example  .gitignore  README.md  package.json
frontend/src/: App.vue  main.js  nearConfig.js  nearNets.js
frontend/src/api/: index.js
frontend/src/components/EffectCards/: EffectCards.vue
frontend/src/components/EffectsModalTemplate/: EffectsModalTemplate.vue
frontend/src/components/HeadBar/: HeadBar.vue
frontend/src/mixins/: StatusMixin.js
frontend/src/near_utilities/: index.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/styles/: _general_set.scss
frontend/src/utilities/: index.js
frontend/src/views/: AddEffect.vue  AddEffectConfirm.vue  BundleNFT.vue  ChooseNFT.vue  CreateNFT.vue  DataEditor.vue  DeployContract.vue  Login.vue  NFTDetails.vue  SendNFT.vue
(+8 files in other folders)
