[package]
name = "donft-bundle"
version = "0.1.0"
authors = ["DoNFT https://twitter.com/DoNFTio"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
factory-wasm = ["wasm"]
wasm = ["near-sdk"]